[package]
name = "aflpp_libafl_qemu"
version = "0.0.0"
authors = ["Yixuan Yang <mail_889@163.com>"]
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
libafl = { path = "../../libafl/"}
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_targets = { path = "../../libafl_targets/"}
libafl_qemu = { path = "../../libafl_qemu/", features = [
  "x86_64",
  "usermode",
] }
nix = { version = "0.29.0", features = ["fs"] }

[lints]
workspace = true
